# picasso

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  TODOs.txt
assets/shaders/: color.frag  debug.frag  debug.vert  simple.frag  simple.vert
shaders/: simple.frag  simple.vert
src/: camera.cc  camera.h  header_only_impl.cc  header_only_impl.h  input.cc  input.h  main.cc  model.cc  model.h  platform.h  shader.cc  shader.h  ui.cc  ui.h
src/assets/: mesh.cc  mesh.h  mesh_registry.cc  mesh_registry.h  shader.cc  shader.h  shader_registry.cc  shader_registry.h  texture.cc  texture.h  texture_registry.cc  texture_registry.h
src/assets/materials/: material.cc  material.h  material_registry.cc  material_registry.h  uniform_value.cc  uniform_value.h
src/assets/shaders/: attribute.h  shader.cc  shader.h  shader_registry.cc  shader_registry.h  uniform.cc  uniform.h
src/debug/: debug.cc  debug.h
src/logging/: log.cc  log.h  log_buffer.cc  log_buffer.h
src/mappers/: mapper.h  shader_material_mapper.h
src/memory/: arena.h
src/models/: attrib_pointer.cc  attrib_pointer.h  mesh.cc  mesh.h  model.cc  model.h  transform.cc  transform.h
src/psl/: lexer.cc  lexer.h
src/registries/: material_registry.h  mesh_registry.h  model_registry.h  shader_registry.cc  shader_registry.h  texture_registry.h
src/shaders/: material.cc  material.h  material_registry.cc  material_registry.h  program.cc  program.h  program_registry.cc  program_registry.h  shader.cc  shader.h  shader_registry.cc  shader_registry.h  uniform_value.cc  uniform_value.h  value.cc  value.h  variable.cc  variable.h
src/textures/: texture.cc  texture.h  texture_registry.cc  texture_registry.h
src/ui/: material_window.cc  material_window.h  mesh_window.cc  mesh_window.h  shader_window.cc  shader_window.h  ui.cc  ui.h  widgets.cc  widgets.h
src/ui/widgets/: popup.h  transform.cc  transform.h  uniform.cc  uniform.h
src/ui/windows/: camera_window.cc  material_window.cc  mesh_window.cc  model_window.cc  shader_window.cc  windows.h
src/utils/: dynamic_array.h  file.cc  file.h  gl.cc  gl.h  glm.h  key.h  log.cc  log.h  macros.h  make_unique.h  map_macro.h  paths.cc  paths.h  printable_enum.h  registry.h  result.h  scope_trigger.h  singleton.h  snprintf.cc  snprintf.h  status.h  status_or.h  string.h
